--- a/views/databarang.ejs
+++ b/views/databarang.ejs
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-success">
       <div class="container-fluid">
         <a class="navbar-brand ms-2" href="#">
-          <img style="width: 50px; border-radius: 50px" src="../assets/logoRS.jpg" alt="" />
+          <img style="width: 50px; border-radius: 50px" src="./assets/logoRS.jpg" alt="" />
         </a>
         <h5>Aplikasi Inventaris RSUD Waluyo Jati</h5>
 
@@ -29,12 +29,13 @@
           <li class="nav-item">
             <a class="nav-link active text-dark" aria-current="page" href="/barang">Data Barang</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/ruangan">Data Ruangan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/petugas">Data Petugas</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="/ruangan">Data Ruangan</a>
+            </li>
+            
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="/petugas">Data Petugas</a>
+              </li>
         </ul>
         <hr />
         <h5>Transaksi</h5>
@@ -56,57 +57,58 @@
       </div>
       <div class="col-md-10">
         <div class="container-fluid">
-          <h3>Pilih Barang yang Akan Didistribusi</h3>
+          <h3>Data Barang</h3>
           <hr />
-
-          <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Cari Nama Barang" title="Type in a name">
-
+          <div class="row mb-3">
+            <div class="col-sm-9">
+              <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Cari Nama Barang"/>
+            </div>
+          </div>
           <table class="table table-success table-striped table-bordered my-3" id="myTable">
             <thead>
               <tr>
                 <th scope="col">No</th>
-                  <th scope="col">Kode Barang</th>
-                  <th scope="col">Nama Barang</th>
-                  <th scope="col">Merk</th>
-                  <th scope="col">Jumlah</th>
-                  <th scope="col">Sisa</th>
-                  <th scope="col">Harga</th>
-                  <th scope="col">Tahun</th>
-                  <th scope="col">Sumber Dana</th>
-                  <th scope="col">Aksi</th>
+                <th scope="col">Kode Barang</th>
+                <th scope="col">Nama Barang</th>
+                <th scope="col">Merk</th>
+                <th scope="col">Jumlah</th>
+                <th scope="col">Harga</th>
+                <th scope="col">Tahun</th>
+                <th scope="col">Sumber Dana</th>
+                <th scope="col">Aksi</th>
               </tr>
             </thead>
             <tbody>
-              <% no=1 %>
-              <% 
-                const rupiah = (number) =>{
-                  var bilangan = number;
-
-                  var reverse = bilangan.toString().split('').reverse().join(''),
-                  ribuan  = reverse.match(/\d{1,3}/g);
-                  ribuan  = ribuan.join('.').split('').reverse().join('');
-                  return ribuan;  
-                }
+              <% let no = 1 %> 
+                  <% 
+                        const rupiah = (number) =>{
+                          var bilangan = number;
+    
+                          var reverse = bilangan.toString().split('').reverse().join(''),
+                          ribuan  = reverse.match(/\d{1,3}/g);
+                          ribuan  = ribuan.join('.').split('').reverse().join('');
+                          return ribuan;  
+                        }
                         
-              %>
-              <% const filter = getBarang.filter(element => element.jumlah > getDetail.filter(el => el.id_barang === element.id_barang).length) %>
-              <% filter.forEach(data => {  %>
-              <tr>
-                <th scope="row"><%= no++ %></th>
-                <td><%= data.kode_barang %></td>
-                <td><%= data.nama_barang %></td>
-                <td><%= data.merk %></td>
-                <td><%= data.jumlah %></td>
-                <td><%= data.jumlah-getDetail.filter(el => el.id_barang === data.id_barang).length %></td>
-                <td><%= rupiah(data.harga) %></td>
-                <td><%= data.tahun %></td>
-                <td><%= data.sumber_dana %></td>
-                <td>
-                  <a href="/distribusi/input/<%= data.id %>" role="button" class="btn btn-success btn-sm">Pilih</a>
-                  <!-- <a href="/distribusi/input/<%= data.id %>"><button type="button" class="btn btn-primary">Pilih</button></a> -->
-                </td>
-              </tr>
-              <% }) %> 
+                     %>
+                     <% dataBarang.forEach(element => { %>
+                      <tr>
+                        <th scope="row"><%= no++ %> </th>
+                        <td><%= element.kode_barang %> </td>
+                        <td><%= element.nama_barang %></td>
+                        <td><%= element.merk %></td>
+                        <td><%= element.jumlah %></td>
+                        <td><%= rupiah(element.harga) %></td>
+                        <td><%= element.tahun %></td>
+                        <td><%= element.sumber_dana %></td>
+                        <td>
+                          <!-- <a href="/barang/previewbarang/<%= element.id %>" role="button" class="btn btn-primary btn-sm">Lihat</a> -->
+                          <a href="/barang/updatebarang/<%= element.id %>" role="button" class="btn btn-secondary btn-sm">Edit</a>
+                          <a href="/barang/deletebyupdate/<%= element.id %>" role="button" class="btn btn-danger btn-sm">Hapus</a>
+                        </td>
+                      </tr>
+                    <% }) %>  
+
               <!-- <tr>
                 <th scope="row">1</th>
                 <td>356</td>
@@ -123,8 +125,7 @@
               </tr> -->
             </tbody>
           </table>
-
-          <!-- <a href="inputdistribusi.html" role="button" class="btn btn-success">Pilih</a> -->
+          <a href="/barang/inputbarang" role="button" class="btn btn-success">Tambah Data Barang</a>
         </div>
       </div>
     </div>
@@ -148,9 +149,6 @@
           }       
         }
       }
-      function deleteUser(){
-        alert('hehe');
-      }
-    </script>
+      </script>
   </body>
 </html>
