--- a/views/dataruangan.ejs
+++ b/views/dataruangan.ejs
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-success">
       <div class="container-fluid">
         <a class="navbar-brand ms-2" href="#">
-          <img style="width: 50px; border-radius: 50px" src="../assets/logoRS.jpg" alt="" />
+          <img style="width: 50px; border-radius: 50px" src="./assets/logoRS.jpg" alt="" />
         </a>
         <h5>Aplikasi Inventaris RSUD Waluyo Jati</h5>
 
@@ -29,12 +29,14 @@
           <li class="nav-item">
             <a class="nav-link active text-dark" aria-current="page" href="/barang">Data Barang</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/ruangan">Data Ruangan</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/petugas">Data Petugas</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="/ruangan">Data Ruangan</a>
+            </li>
+            
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="/petugas">Data Petugas</a>
+              </li>
+
         </ul>
         <hr />
         <h5>Transaksi</h5>
@@ -43,79 +45,54 @@
             <a class="nav-link text-dark" href="/distribusi/pilih">Distribusi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="mutasi.html">Mutasi</a>
+            <a class="nav-link text-dark" href="/laporan">Mutasi</a>
           </li>
         </ul>
         <hr />
         <h5>Laporan</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link text-dark" href="/laporan">Daftar Inventaris Ruangan</a>
+            <a class="nav-link text-dark" href="inventaris.html">Daftar Inventaris Ruangan</a>
           </li>
         </ul>
       </div>
       <div class="col-md-10">
         <div class="container-fluid">
-          <h3>Pilih Barang yang Akan Didistribusi</h3>
+          <h3>Data Ruangan</h3>
           <hr />
-
-          <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Cari Nama Barang" title="Type in a name">
-
+          <div class="row mb-3">
+            <div class="col-sm-9">
+              <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Cari Nama Ruangan"/>
+            </div>
+          </div>
           <table class="table table-success table-striped table-bordered my-3" id="myTable">
             <thead>
               <tr>
                 <th scope="col">No</th>
-                  <th scope="col">Kode Barang</th>
-                  <th scope="col">Nama Barang</th>
-                  <th scope="col">Merk</th>
-                  <th scope="col">Jumlah</th>
-                  <th scope="col">Sisa</th>
-                  <th scope="col">Harga</th>
-                  <th scope="col">Tahun</th>
-                  <th scope="col">Sumber Dana</th>
-                  <th scope="col">Aksi</th>
+                <th scope="col">ID Ruangan</th>
+                <th scope="col">Nama Ruangan</th>
+                <th scope="col">Aksi</th>
               </tr>
             </thead>
             <tbody>
-              <% no=1 %>
-              <% 
-                const rupiah = (number) =>{
-                  var bilangan = number;
-
-                  var reverse = bilangan.toString().split('').reverse().join(''),
-                  ribuan  = reverse.match(/\d{1,3}/g);
-                  ribuan  = ribuan.join('.').split('').reverse().join('');
-                  return ribuan;  
-                }
-                        
-              %>
-              <% const filter = getBarang.filter(element => element.jumlah > getDetail.filter(el => el.id_barang === element.id_barang).length) %>
-              <% filter.forEach(data => {  %>
-              <tr>
-                <th scope="row"><%= no++ %></th>
-                <td><%= data.kode_barang %></td>
-                <td><%= data.nama_barang %></td>
-                <td><%= data.merk %></td>
-                <td><%= data.jumlah %></td>
-                <td><%= data.jumlah-getDetail.filter(el => el.id_barang === data.id_barang).length %></td>
-                <td><%= rupiah(data.harga) %></td>
-                <td><%= data.tahun %></td>
-                <td><%= data.sumber_dana %></td>
-                <td>
-                  <a href="/distribusi/input/<%= data.id %>" role="button" class="btn btn-success btn-sm">Pilih</a>
-                  <!-- <a href="/distribusi/input/<%= data.id %>"><button type="button" class="btn btn-primary">Pilih</button></a> -->
-                </td>
-              </tr>
-              <% }) %> 
+              <% let no=1 %> 
+                <% dataRuangan.forEach(element => { %>
+                  <tr>
+                    <th scope="row"><%= no++ %></th>
+                    <td><%= element.id_ruangan %></td>
+                    <td><%= element.nama_ruangan %></td>
+                    <td>
+                      <a href="/ruangan/update/<%= element.id %>" role="button" class="btn btn-secondary btn-sm">Edit</a>
+                      <a href="#" role="button" class="btn btn-danger btn-sm">Hapus</a>
+                      <!-- <a href="/ruangan/update/<%= element.id %>"><button type="button" class="btn btn-primary">Edit</button></a>
+                      <button type="button" class="btn btn-primary" onclick="deleteUser()">Delete</button> -->
+                    </td>
+                  </tr>
+              <% }) %>
               <!-- <tr>
                 <th scope="row">1</th>
-                <td>356</td>
-                <td>Pensil</td>
-                <td>2B</td>
-                <td>16</td>
-                <td>1000</td>
-                <td></td>
-                <td></td>
+                <td>112</td>
+                <td>Cemara</td>
                 <td>
                   <a href="" role="button" class="btn btn-secondary btn-sm">Edit</a>
                   <a href="" role="button" class="btn btn-danger btn-sm">Hapus</a>
@@ -123,8 +100,7 @@
               </tr> -->
             </tbody>
           </table>
-
-          <!-- <a href="inputdistribusi.html" role="button" class="btn btn-success">Pilih</a> -->
+          <a href="/ruangan/inputruangan" role="button" class="btn btn-success">Tambah Data Ruangan</a>
         </div>
       </div>
     </div>
@@ -148,9 +124,6 @@
           }       
         }
       }
-      function deleteUser(){
-        alert('hehe');
-      }
-    </script>
+      </script>
   </body>
 </html>
