--- a/views/inputbarang2.ejs
+++ b/views/inputbarang2.ejs
@@ -5,29 +5,29 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Tables / General - NiceAdmin Bootstrap Template</title>
+  <title>Forms / Elements - NiceAdmin Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="../../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/favicon.png" rel="icon">
+  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="../../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="../../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="../../../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="../../../assets/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="../../../assets/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="../../../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="../../../assets/vendor/simple-datatables/style.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/quill/quill.snow.css" rel="stylesheet">
+  <link href="../assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+  <link href="../assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="../assets/vendor/simple-datatables/style.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="../../../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: NiceAdmin - v2.3.1
@@ -44,7 +44,7 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="../../../assets/img/logo.png" alt="">
+        <img src="../assets/img/logo.png" alt="">
         <span class="d-none d-lg-block">NiceAdmin</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
@@ -159,7 +159,7 @@
 
             <li class="message-item">
               <a href="#">
-                <img src="../../../assets/img/messages-1.jpg" alt="" class="rounded-circle">
+                <img src="../assets/img/messages-1.jpg" alt="" class="rounded-circle">
                 <div>
                   <h4>Maria Hudson</h4>
                   <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
@@ -173,7 +173,7 @@
 
             <li class="message-item">
               <a href="#">
-                <img src="../../../assets/img/messages-2.jpg" alt="" class="rounded-circle">
+                <img src="../assets/img/messages-2.jpg" alt="" class="rounded-circle">
                 <div>
                   <h4>Anna Nelson</h4>
                   <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
@@ -187,7 +187,7 @@
 
             <li class="message-item">
               <a href="#">
-                <img src="../../../assets/img/messages-3.jpg" alt="" class="rounded-circle">
+                <img src="../assets/img/messages-3.jpg" alt="" class="rounded-circle">
                 <div>
                   <h4>David Muldon</h4>
                   <p>Velit asperiores et ducimus soluta repudiandae labore officia est ut...</p>
@@ -210,7 +210,7 @@
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img src="../../../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+            <img src="../assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
             <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
 
@@ -359,12 +359,12 @@
       </li><!-- End Components Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
+        <a class="nav-link " data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        <ul id="forms-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           <li>
-            <a href="forms-elements.html">
+            <a href="forms-elements.html" class="active">
               <i class="bi bi-circle"></i><span>Form Elements</span>
             </a>
           </li>
@@ -387,12 +387,12 @@
       </li><!-- End Forms Nav -->
 
       <li class="nav-item">
-        <a class="nav-link " data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
+        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
           <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
         </a>
-        <ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
+        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="tables-general.html" class="active">
+            <a href="tables-general.html">
               <i class="bi bi-circle"></i><span>General Tables</span>
             </a>
           </li>
@@ -508,12 +508,12 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>General Tables</h1>
+      <h1>Form Elements</h1>
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-          <li class="breadcrumb-item">Tables</li>
-          <li class="breadcrumb-item active">General</li>
+          <li class="breadcrumb-item">Forms</li>
+          <li class="breadcrumb-item active">Elements</li>
         </ol>
       </nav>
     </div><!-- End Page Title -->
@@ -524,44 +524,87 @@
 
           <div class="card">
             <div class="card-body">
-              <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="/ruangan/inputruangan">Tambah Data</a></div>
+              <h5 class="card-title">Input Barang</h5>
 
-              <!-- Default Table -->
-              <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
-              <table class="table" id="myTable">
-                <thead>
-                  <tr>
-                    <th scope="col">No</th>
-                    <th scope="col">Kode Ruangan</th>
-                    <th scope="col">Nama Ruangan</th>
-                    <th scope="col"></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% let no=1 %> 
-                  <% dataRuangan.forEach(element => { %>
-                  <tr>
-                    <th scope="row"><%= no++ %></th>
-                    <td><%= element.id_ruangan %></td>
-                    <td><%= element.nama_ruangan %></td>
-                    <td>
-                      <a href="/ruangan/update/<%= element.id %>"><button type="button" class="btn btn-primary">Edit</button></a>
-                      <button type="button" class="btn btn-primary" onclick="deleteUser()">Delete</button>
-                    </td>
-                  </tr>
-                  <% }) %>
-                </tbody>
-              </table>
-              <!-- End Default Table Example -->
-            </div>
-          </div>
+              <!-- General Form Elements -->
+              <form action="/barang" method="post">
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Kode Barang</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="kode_barang">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Nama Barang</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="nama_barang">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Merk</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="merk">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Tipe</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="tipe">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputNumber" class="col-sm-2 col-form-label">Jumlah</label>
+                  <div class="col-sm-10">
+                    <input type="number" class="form-control" name="jumlah">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Harga</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="harga" id="harga">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Tahun</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="tahun">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputText" class="col-sm-2 col-form-label">Sumber Dana</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" name="sumber_dana">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="inputNumber" class="col-sm-2 col-form-label">Foto</label>
+                  <div class="col-sm-10">
+                    <input class="form-control" type="file" id="formFile" name="foto">
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="textarea" class="col-sm-2 col-form-label">Keterangan</label>
+                  <div class="col-sm-10">
+                    <textarea class="form-control" style="height: 100px" name="keterangan"></textarea>
+                  </div>
+                </div>
+                
 
-          
-              
+                
+
+                <div class="row mb-3">
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Simpan</button>
+                  </div>
+                </div>
+
+              </form><!-- End General Form Elements -->
+
             </div>
           </div>
 
         </div>
+
       </div>
     </section>
 
@@ -584,38 +627,39 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="../../../assets/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="../../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../../../assets/vendor/chart.js/chart.min.js"></script>
-  <script src="../../../assets/vendor/echarts/echarts.min.js"></script>
-  <script src="../../../assets/vendor/quill/quill.min.js"></script>
-  <script src="../../../assets/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="../../../assets/vendor/tinymce/tinymce.min.js"></script>
-  <script src="../../../assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/chart.js/chart.min.js"></script>
+  <script src="assets/vendor/echarts/echarts.min.js"></script>
+  <script src="assets/vendor/quill/quill.min.js"></script>
+  <script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
+  <script src="assets/vendor/tinymce/tinymce.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="../../../assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
   <script>
-    function myFunction() {
-      var input, filter, table, tr, td, i, txtValue;
-      input = document.getElementById("myInput");
-      filter = input.value.toUpperCase();
-      table = document.getElementById("myTable");
-      tr = table.getElementsByTagName("tr");
-      for (i = 0; i < tr.length; i++) {
-        td = tr[i].getElementsByTagName("td")[1];
-        if (td) {
-          txtValue = td.textContent || td.innerText;
-          if (txtValue.toUpperCase().indexOf(filter) > -1) {
-            tr[i].style.display = "";
-          } else {
-            tr[i].style.display = "none";
-          }
-        }       
-      }
-    }
-    </script>
+    var dengan_rupiah = document.getElementById('harga');
+    dengan_rupiah.addEventListener('keyup', function(e){
+      dengan_rupiah.value = formatRupiah(this.value, 'Rp. ');
+    });
 
+    function formatRupiah(angka, prefix){
+      var number_string = angka.replace(/[^,\d]/g, '').toString(),
+      split = number_string.split(','),
+      sisa  = split[0].length % 3,
+      rupiah  = split[0].substr(0, sisa),
+      ribuan  = split[0].substr(sisa).match(/\d{3}/gi);
+    
+      if (ribuan) {
+        separator = sisa ? '.' : '';
+        rupiah += separator + ribuan.join('.');
+      }
+  
+      rupiah = split[1] != undefined ? rupiah + ',' + split[1] : rupiah;
+      return prefix == undefined ? rupiah : (rupiah ? 'Rp. ' + rupiah : '');
+    }
+  </script>
 </body>
 
 </html>
