--- a/views/updatedatapetugas.ejs
+++ b/views/updatedatapetugas.ejs
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-success">
       <div class="container-fluid">
         <a class="navbar-brand ms-2" href="#">
-          <img style="width: 50px; border-radius: 50px" src="../assets/logoRS.jpg" alt="" />
+          <img style="width: 50px; border-radius: 50px" src="./assets/logoRS.jpg" alt="" />
         </a>
         <h5>Aplikasi Inventaris RSUD Waluyo Jati</h5>
 
@@ -27,13 +27,13 @@
         <h5>Master Data</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active text-dark" aria-current="page" href="/barang">Data Barang</a>
+            <a class="nav-link active text-dark" aria-current="page" href="databarang.html">Data Barang</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="/ruangan">Data Ruangan</a>
+            <a class="nav-link text-dark" href="dataruangan.html">Data Ruangan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="/petugas">Data Petugas</a>
+            <a class="nav-link text-dark" href="datapetugas.html">Data Petugas</a>
           </li>
         </ul>
         <hr />
@@ -56,21 +56,36 @@
       </div>
       <div class="col-md-10">
         <div class="container-fluid">
-          <h3>Input Data Ruangan</h3>
+          <h3>Update Data Petugas</h3>
           <hr />
-          <form action="/ruangan" method="post">
+          <% dataPetugas %> 
+          <form action="/petugas/updatepetugas/<%= dataPetugas.id %> " method="post">
             <div class="row">
               <div class="col-md-6">
                 <div class="row mb-3">
-                  <label for="inputIdRuangan" class="col-sm-3 col-form-label">ID Ruangan</label>
-                  <div class="col-sm-3">
-                    <input type="text" class="form-control" id="inputIdRuangan" name="id_ruangan"/>
+                  <label for="inputNamaLengkap" class="col-sm-3 col-form-label">Nama Lengkap</label>
+                  <div class="col-sm-9">
+                    <input type="text" class="form-control" id="inputNamaLengkap" name="nama_petugas" value="<%= dataPetugas.nama_petugas %>"/>
                   </div>
                 </div>
                 <div class="row mb-3">
-                  <label for="inputNamaRuangan" class="col-sm-3 col-form-label">Nama Ruangan</label>
+                  <label for="inputUsername" class="col-sm-3 col-form-label">Username</label>
                   <div class="col-sm-9">
-                    <input type="text" class="form-control" id="inputNamaRuangan" name="nama_ruangan"/>
+                    <input type="text" class="form-control" id="inputUsername" name="username" disabled value="<%= dataPetugas.username %>"/>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <label for="selectLevel" class="col-sm-3 col-form-label">Level</label>
+                  <div class="col-sm-9">
+                    <select id="selectLevel" class="form-select" name="level">
+                      <% if (dataPetugas.level === "Admin") { %>
+                        <option selected value="Admin"><%= dataPetugas.level %> </option>
+                        <option value="Petugas">Petugas</option>
+                      <% } else { %>
+                        <option value="Admin">Admin</option>
+                        <option selected value = "Petugas"><%= dataPetugas.level %> </option>
+                      <% } %>   
+                    </select>
                   </div>
                 </div>
 
@@ -78,7 +93,6 @@
                   <div class="col-sm-3"></div>
                   <div class="col-sm-9">
                     <button type="submit" class="btn btn-success">Simpan</button>
-                    <!-- <a href="dataruangan.html" type="submit" role="button" class="btn btn-success">Simpan</a> -->
                   </div>
                 </div>
               </div>
