--- a/views/mutasi.ejs
+++ b/views/mutasi.ejs
@@ -79,19 +79,21 @@
             <thead>
               <tr>
                 <th scope="col">No</th>
+                <th scope="col">ID Detail Barang</th>
                 <th scope="col">Kode Barang</th>
                 <th scope="col">Nama Barang</th>
                 <th scope="col">Merk</th>
-                <th scope="col">Jumlah</th>
                 <th scope="col">Harga</th>
                 <th scope="col">B</th>
                 <th scope="col">KB</th>
                 <th scope="col">RB</th>
+                <th scope="col">Aski</th>
               </tr>
             </thead>
             <tbody>
                   <tr>
                     <th scope="row"></th>
+                    <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
