--- a/views/databarang.ejs
+++ b/views/databarang.ejs
@@ -44,7 +44,7 @@
             <a class="nav-link text-dark" href="/distribusi/pilih">Distribusi</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" href="mutasi.html">Mutasi</a>
+            <a class="nav-link text-dark" href="/mutasi">Mutasi</a>
           </li>
         </ul>
         <hr />
