--- a/views/dataruangan.ejs
+++ b/views/dataruangan.ejs
@@ -52,7 +52,7 @@
         <h5>Laporan</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link text-dark" href="inventaris.html">Daftar Inventaris Ruangan</a>
+            <a class="nav-link text-dark" href="/laporan">Daftar Inventaris Ruangan</a>
           </li>
         </ul>
       </div>
