--- a/views/inputbarang.ejs
+++ b/views/inputbarang.ejs
@@ -88,7 +88,7 @@
                 <div class="row mb-3">
                   <label for="inputJumlah" class="col-sm-3 col-form-label">Jumlah</label>
                   <div class="col-sm-9">
-                    <input type="number" class="form-control" id="inputJumlah" name="jumlah"/>
+                    <input type="number" class="form-control" id="inputJumlah" name="jumlah" min="0"/>
                   </div>
                 </div>
                 <div class="row mb-3">
