--- a/views/inputdistribusi.ejs
+++ b/views/inputdistribusi.ejs
@@ -79,7 +79,7 @@
                 <div class="row mb-3">
                   <label for="inputJumlah" class="col-sm-3 col-form-label">Jumlah</label>
                   <div class="col-sm-2">
-                    <input type="number" class="form-control" id="inputJumlah" name="jumlah"/>
+                    <input type="number" min="0" class="form-control" id="inputJumlah" name="jumlah"/>
                   </div>
                 </div>
                 <div class="row mb-3">
@@ -134,15 +134,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script>
       function cek(){
-        let jumlah = Number(document.getElementById('inputJumlah').value);
-        // alert(jumlah +' '+typeof(jumlah))
-        let baik = Number(document.getElementById('baik').value);
-        let kurang_baik = Number(document.getElementById('kurang_baik').value);
-        let rusak_berat = Number(document.getElementById('rusak_berat').value);
-        if(baik === jumlah){ 
-            document.getElementById('kurang_baik').value = "0";
-            document.getElementById('rusak_berat').value = "0";        
-        }
+        // let jumlah = Number(document.getElementById('inputJumlah').value);
+        // // alert(jumlah +' '+typeof(jumlah))
+        // let baik = Number(document.getElementById('baik').value);
+        // let kurang_baik = Number(document.getElementById('kurang_baik').value);
+        // let rusak_berat = Number(document.getElementById('rusak_berat').value);
+        // if(baik === jumlah){ 
+        //     document.getElementById('kurang_baik').value = "0";
+        //     document.getElementById('rusak_berat').value = "0";        
+        // }else if(baik + kurang_baik - jumlah === 0){
+          
+        // }
+
+        //   else if(baik > jumlah){
+        //   alert('Tidak Boleh Melebihi Jumlah barang')
+        //   document.getElementById('baik').value = "0";
+        // }
       }
     </script>
   </body>
